[package]
name = "native"
version = "0.1.0"
authors = ["Hansihe <hansihe@hansihe.com>"]

[lib]
name = "rust_nif"
path = "src/lib.rs"
crate_type = ["dylib"]

[dependencies]
#rustler = ">=0.5"
#rustler_codegen = ">=0.5"

[dependencies.rustler]
path = "../../Rustler/"
[dependencies.rustler_codegen]
path = "../../Rustler/rustler_codegen/"
